# shoe-product-discovery

./: CLAUDE.md  README.md  agent.py  cli.py  main.py  models.py  pyproject.toml  tools.py
